<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/grid_0_5"
        android:paddingTop="@dimen/grid_1"
        android:clipToPadding="false"
        android:background="?android:colorBackground"
        app:paddingTopSystemWindowInsets="@{true}"
        tools:targetApi="o">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/grid_1"
            app:paddingBottomSystemWindowInsets="@{true}">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cases_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_1"
                android:layout_marginTop="@dimen/grid_4"
                android:layout_marginEnd="@dimen/grid_1"
                android:clickable="true"
                android:elevation="@dimen/plane_16"
                android:focusable="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Covid.MediumComponent"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/grid_2"
                    android:paddingBottom="@dimen/grid_2">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/cases_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginEnd="@dimen/grid_2"
                        android:maxLines="1"
                        android:text="@string/cases"
                        android:textColor="@color/covid19_yellow"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/cases_logo_image_view"
                        android:layout_width="@dimen/cases_image_size"
                        android:layout_height="@dimen/cases_image_size"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginTop="@dimen/grid_2"
                        android:layout_marginBottom="@dimen/grid_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cases_text_view"
                        app:layout_constraintVertical_bias="0.053"
                        app:srcCompat="@drawable/ic_cases"
                        android:contentDescription="@string/cases_image_view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/total_cases_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginTop="@dimen/grid_4"
                        android:layout_marginEnd="@dimen/grid_2"
                        android:textColor="@color/covid19_yellow"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cases_text_view" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/recovery_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_1"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginEnd="@dimen/grid_1"
                android:clickable="true"
                android:elevation="@dimen/plane_16"
                android:focusable="true"
                app:cardPreventCornerOverlap="false"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Covid.MediumComponent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cases_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/grid_2"
                    android:paddingBottom="@dimen/grid_2">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/recovery_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginEnd="@dimen/grid_2"
                        android:maxLines="1"
                        android:text="@string/recovery"
                        android:textColor="@color/covid19_green"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/recovery_logo_image_view"
                        android:layout_width="@dimen/cases_image_size"
                        android:layout_height="@dimen/cases_image_size"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginTop="@dimen/grid_2"
                        android:layout_marginBottom="@dimen/grid_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recovery_text_view"
                        app:layout_constraintVertical_bias="0.053"
                        app:srcCompat="@drawable/ic_recovery"
                        android:contentDescription="@string/recovery_image_view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/total_recoveries_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginTop="@dimen/grid_4"
                        android:layout_marginEnd="@dimen/grid_2"
                        android:textColor="@color/covid19_green"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recovery_text_view" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dead_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_1"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginEnd="@dimen/grid_1"
                android:clickable="true"
                android:elevation="@dimen/plane_16"
                android:focusable="true"
                app:cardPreventCornerOverlap="false"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Covid.MediumComponent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recovery_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/grid_2"
                    android:paddingBottom="@dimen/grid_2">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dead_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginEnd="@dimen/grid_2"
                        android:maxLines="1"
                        android:text="@string/deaths"
                        android:textColor="@color/covid19_red"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/dead_logo_image_view"
                        android:layout_width="@dimen/cases_image_size"
                        android:layout_height="@dimen/cases_image_size"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginTop="@dimen/grid_2"
                        android:layout_marginBottom="@dimen/grid_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dead_text_view"
                        app:layout_constraintVertical_bias="0.053"
                        app:srcCompat="@drawable/ic_dead"
                        android:contentDescription="@string/deaths_image_view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/total_dead_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_2"
                        android:layout_marginTop="@dimen/grid_4"
                        android:layout_marginEnd="@dimen/grid_2"
                        android:textColor="@color/covid19_red"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dead_text_view" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/last_update_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dead_card_view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:gravity="center"
                android:text="@string/advices"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_update_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/cases_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</layout>